# cinema

./: .gitignore  README.md
alembic/: env.py
alembic/base-data/: 024370544566_insert_base_data.py
app/: __main__.py  cinema.py
app/api/v1/: movie.py  seat.py
app/core/: config.py
app/crud/: __init__.py  movie.py  room.py  seat.py
app/db/: base.py
app/models/: room.py  schedule.py
app/schemas/: __init__.py  auth.py  movie.py  room.py  seat.py
backend/: pyproject.toml
backend/alembic/versions/: f7c71f747411_initial_migration.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  room.py  schedule.py  seat.py
backend/app/core/: auth.py  security.py
backend/app/crud/: base.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  movie.py  seat.py  user.py
backend/app/schemas/: schedule.py  user.py
backend/mock/: import_all.py  movie.py  schedule.py  seat.py  user.py
mock/: room.py
